--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,13 @@
 
   <body>
     <script src="sketch.js"></script>
+    <button id="black">Black</button>
+    <button id="red">Red</button>
+    <button id="blue">Blue</button>
+    <button id="green">Green</button>
+    <button id="pink">Pink</button>
+    <button id="purple">Purple</button>
+    <button id="yellow">Yellow</button>
+    <button id="clear">Clear</button>
   </body>
 </html>
