added clearing instructions, put buttons in flexbox

--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,17 @@
   </head>
 
   <body>
-    <script src="sketch.js"></script>
-    <button id="black">Black</button>
-    <button id="red">Red</button>
-    <button id="blue">Blue</button>
-    <button id="green">Green</button>
-    <button id="pink">Pink</button>
-    <button id="purple">Purple</button>
-    <button id="yellow">Yellow</button>
-    <button id="clear">Clear</button>
+    <div class="container">
+      <script src="sketch.js"></script>
+      <button class = "item" id="black">Black</button>
+      <button class = "item" id="red">Red</button>
+      <button class = "item" id="blue">Blue</button>
+      <button class = "item" id="green">Green</button>
+      <button class = "item" id="pink">Pink</button>
+      <button class = "item" id="purple">Purple</button>
+      <button class = "item" id="yellow">Yellow</button>
+      <p>Press the Spacebar if you need more Space.</p>
+    </div>
+    <div class="custom-cursor"></div>
   </body>
 </html>
